cmake_minimum_required(VERSION 3.7)

project(CMBcpp)

set(CMAKE_CXX_STANDARD 14)

set (CMAKE_CXX_FLAGS "-Weverything -Ofast")

include_directories(/usr/local/cHealpix/include)

set(CMAKE_EXE_LINKER_FLAGS "-lfftw3l")

#set(SOURCE_FILES_main main.cpp)
#set(SOURCE_FILES_v_0_0_ src/v_0_0_.cpp)
#set(SOURCE_FILES_v_0_1_ src/v_0_1_.cpp)
#set(SOURCE_FILES_v_0_2_ src/v_0_2_.cpp)
#set(SOURCE_FILES_v_0_3_ src/v_0_3_.cpp)
#set(SOURCE_FILES_v_0_4_ src/v_0_4_.cpp)
#set(SOURCE_FILES_v_0_5_ src/v_0_5_.cpp)
# set(SOURCE_FILES_v_0_6_ src/v_0_6_.cpp)
set(SOURCE_FILES_v_0_7_ src/v_0_7_.cpp)
set(SOURCE_FILES_v_0_8_ src/v_0_8_.cpp)
set(SOURCE_FILES_v_1_0_ src/v_1_0_.cpp)
set(SOURCE_FILES_v_1_1_ src/v_1_1_.cpp)
set(SOURCE_FILES_v_1_2_ src/v_1_2_.cpp)
set(SOURCE_FILES_print_f_test src/print_f_test.cpp)
set(SOURCE_FILES_v_0_9_ src/v_0_9_.cpp)
set(SOURCE_FILES_v_1_3_ src/v_1_3_.cpp)
set(SOURCE_FILES_length src/length_test.cpp)

set(SOURCE_FILES_lib2_test_0_1_ src/lib2_test_0_1_.cpp)

#add_executable(main ${SOURCE_FILES_main})
#add_executable(v_0_0_ ${SOURCE_FILES_v_0_0_})
#add_executable(v_0_1_ ${SOURCE_FILES_v_0_1_})
#add_executable(v_0_2_ ${SOURCE_FILES_v_0_2_})
#add_executable(v_0_3_ ${SOURCE_FILES_v_0_3_})
#add_executable(v_0_4_ ${SOURCE_FILES_v_0_4_})
#add_executable(v_0_5_ ${SOURCE_FILES_v_0_5_})
# add_executable(v_0_6_ ${SOURCE_FILES_v_0_6_})
add_executable(v_0_7_ ${SOURCE_FILES_v_0_7_})
add_executable(v_0_8_ ${SOURCE_FILES_v_0_8_})
add_executable(v_1_0_ ${SOURCE_FILES_v_1_0_})
add_executable(v_1_1_ ${SOURCE_FILES_v_1_1_})
add_executable(v_1_2_ ${SOURCE_FILES_v_1_2_})
add_executable(print_f_test ${SOURCE_FILES_print_f_test})
add_executable(v_0_9_ ${SOURCE_FILES_v_0_9_})
add_executable(v_1_3_ ${SOURCE_FILES_v_1_3_})

add_executable(lib2_test_0_1_ ${SOURCE_FILES_lib2_test_0_1_})

include_directories(lib)
add_subdirectory(lib)

include_directories(lib2)
add_subdirectory(lib2)

#target_link_libraries(main lib)
#target_link_libraries(v_0_0_ lib)
#target_link_libraries(v_0_1_ lib)
#target_link_libraries(v_0_2_ lib)
#target_link_libraries(v_0_3_ lib)
#target_link_libraries(v_0_4_ lib)
#target_link_libraries(v_0_5_ lib)
# target_link_libraries(v_0_6_ lib)
target_link_libraries(v_0_7_ lib)
target_link_libraries(v_0_8_ lib)
target_link_libraries(v_1_0_ lib)
target_link_libraries(v_1_1_ lib)
target_link_libraries(v_1_2_ lib)
target_link_libraries(v_0_9_ lib)
target_link_libraries(v_1_3_ lib)

target_link_libraries(lib2_test_0_1_ lib2)

include_directories(bin)
